deployment/infrasetructure/main.tf
provider "aws" {
  region = var.aws_region
}

# VPC
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "main-vpc"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-gateway"
  }
}

# Route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public-route-table"
  }
}

# Subnets públicas
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
}

# Asociaciones de tabla de rutas
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.public.id
}

# Security Group para RDS
resource "aws_security_group" "rds_sg" {
  name        = "rds_sg"
  description = "Allow PostgreSQL access"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Subnet group para RDS
resource "aws_db_subnet_group" "main" {
  name       = "main-db-subnet-group"
  subnet_ids = [aws_subnet.public_a.id, aws_subnet.public_b.id]

  tags = {
    Name = "Main DB subnet group"
  }
}

# Instancia RDS (privada, sin publicly_accessible)
resource "aws_db_instance" "postgres" {
  identifier              = "franquicias-db"
  engine                  = "postgres"
  instance_class          = "db.t3.micro"
  allocated_storage       = 20
  db_name                 = var.db_name
  username                = var.db_username
  password                = var.db_password
  db_subnet_group_name    = aws_db_subnet_group.main.name
  vpc_security_group_ids  = [aws_security_group.rds_sg.id]
  skip_final_snapshot     = true
  publicly_accessible     = true
}

# Security Group para EC2
resource "aws_security_group" "ec2_sg" {
  name        = "ec2_sg"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2 con Docker y microservicio
resource "aws_instance" "microservice" {
  ami                         = "ami-0fc5d935ebf8bc3bc"  # Amazon Linux 2
  instance_type               = "t3.micro"
  subnet_id                   = aws_subnet.public_a.id
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true
  key_name                    = "Prueba Nequi"

  user_data = <<-EOF
              #!/bin/bash
              apt update -y
              apt install -y docker.io
              apt-get install -y ca-certificates curl
              # Descarga el certificado raíz de Amazon RDS
              curl -o /usr/local/share/ca-certificates/global-bundle.crt https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
              # Actualiza el sistema de certificados
              update-ca-certificates

              sleep 10

              systemctl start docker
              systemctl enable docker
              usermod -aG docker ubuntu

              sleep 10

              docker pull brayang112/microservicio-franquicias:latest
              sleep 10

              docker run -d --name franquicias \
                -p 8080:8080 \
                -e DATABASE_HOST=${aws_db_instance.postgres.address} \
                -e DATABASE_USERNAME=${var.db_username} \
                -e DATABASE_PASSWORD=${var.db_password} \
                brayang112/microservicio-franquicias:latest
              EOF


  tags = {
    Name = "Microservicio Franquicias"
  }
}
